--- a/emailops-build/roles/build-zimbra/tasks/common/globalconfig.yml
+++ b/emailops-build/roles/build-zimbra/tasks/common/globalconfig.yml
@@ -15,6 +15,7 @@
   become: yes
   become_user: zimbra
   become_method: sudo
+  when: apply_global_config|bool
 
 - name: (POSTINSTALL) Update exclude cipher list (global config)
   command: "{{ install_dir }}/bin/zmprov mcf zimbraReverseProxySSLCiphers +{{ item }}"
@@ -22,3 +23,4 @@
   become: yes
   become_user: zimbra
   become_method: sudo
+  when: apply_global_config|bool
