--- a/distributeProfile/site.yml
+++ b/distributeProfile/site.yml
@@ -3,7 +3,27 @@
 #   DESCRIPTION:  Entry point for playbook
 #==============================================================================
 ---
+- hosts: localhost
+  tasks:
+    - name: check out current repository
+      git:
+        clone=yes
+        dest="{{ checkout_to }}"
+        key_file="{{ ssh_key }}"
+        recursive=yes
+        repo="{{ dotfiles_repo }}"
+        track_submodules=yes
+        update=yes
+        version="{{ version }}"
+
 - hosts: all
   gather_facts: false
   roles:
     - installProfile
+
+- hosts: localhost
+  tasks:
+    - name: Remove checkout directory on completion
+      file:
+        path="{{ checkout_to }}"
+        state=absent
