--- a/emailops-build/roles/build-zimbra/tasks/common/serverconfig.yml
+++ b/emailops-build/roles/build-zimbra/tasks/common/serverconfig.yml
@@ -21,9 +21,8 @@
     zimbraPop3SSLProxyBindPort 995 zimbraPop3ProxyBindPort 110 zimbraPop3MaxConnections 600 zimbraPop3BindPort 7110 zimbraMessageCacheSize 10000
     zimbraMailboxMoveSkipBlobs TRUE zimbraMailboxMoveSkipHsmBlobs TRUE zimbraMailPurgeBatchSize 100 zimbraMailFileDescriptorCacheSize 20000
     zimbraMailEmptyFolderBatchSize 100 zimbraMailContentMaxSize 104857600 zimbraImapSSLBindPort 7993 zimbraImapSSLProxyBindPort 993 zimbraImapProxyBindPort 143
-    zimbraImapMaxConnections 1800 zimbraImapBindPort 7143 zimbraBackupSkipBlobs TRUE zimbraBackupSkipHsmBlobs TRUE -zimbraLmtpNumThreads 20
-    -zimbraHttpNumThreads 250 -zimbraImapNumThreads 600 -zimbraPop3NumThreads 600 -zimbraImapMaxRequestSize 200 -zimbraImapMaxConnections 600
-    -zimbraHttpDebugHandlerEnabled FALSE -zimbraHttpDebugHandlerEnabled TRUE -zimbraRedoLogDeleteOnRollover FALSE -zimbraRedoLogDeleteOnRollover TRUE"
+    zimbraImapMaxConnections 1800 zimbraImapBindPort 7143 zimbraBackupSkipBlobs TRUE zimbraBackupSkipHsmBlobs TRUE zimbraLmtpNumThreads 250
+    zimbraImapNumThreads 600 zimbraPop3NumThreads 600 zimbraImapMaxRequestSize 10240 zimbraHttpDebugHandlerEnabled FALSE zimbraRedoLogDeleteOnRollover TRUE"
   become: yes
   become_user: zimbra
   become_method: sudo
