--- a/emailops-build/roles/build-zimbra/tasks/pop/proxy.yml
+++ b/emailops-build/roles/build-zimbra/tasks/pop/proxy.yml
@@ -4,7 +4,7 @@
 #==============================================================================
 ---
 - name: (POSTINSTALL) Configure Zimbra for reverse proxying (server config)
-  command: "{{ install_dir }}/bin/zmprov ms {{ hostvars['{{ inventory_hostname }}'] }} zimbraMailReferMode reverse-proxied -zimbraReverseProxyImapStartTlsMode on -zimbraReverseProxyImapStartTlsMode off
+  command: "{{ install_dir }}/bin/zmprov ms {{ hostvars[inventory_hostname]['ansible_fqdn'] }} zimbraMailReferMode reverse-proxied -zimbraReverseProxyImapStartTlsMode on -zimbraReverseProxyImapStartTlsMode off
     -zimbraReverseProxyImapStartTlsMode only zimbraImapBindPort 7143 zimbraImapProxyBindPort 143 zimbraImapSSLBindPort 7993 zimbraImapSSLProxyBindPort 993 -zimbraReverseProxyPop3StartTlsMode on
     -zimbraReverseProxyPop3StartTlsMode off -zimbraReverseProxyPop3StartTlsMode only zimbraPop3BindPort 7110 zimbraPop3ProxyBindPort 110 zimbraPop3SSLBindPort 7995 zimbraPop3SSLProxyBindPort 995
     -zimbraImapCleartextLoginEnabled TRUE -zimbraImapCleartextLoginEnabled FALSE -zimbraPop3CleartextLoginEnabled TRUE -zimbraPop3CleartextLoginEnabled FALSE"
