refractory existing and add new. collapse down ecelerity

--- a/emailops-build/ansible.cfg
+++ b/emailops-build/ansible.cfg
@@ -3,6 +3,7 @@
 #   DESCRIPTION:  Configuration file for this ansible playbook
 #==============================================================================
 [defaults]
+ansible_python_interpreter      = /usr/bin/python2.6
 action_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/action_plugins
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
@@ -28,7 +29,7 @@ remote_user                     = khuntly
 system_warnings                 = TRUE
 timeout                         = 10
 vars_plugins                    = /usr/lib/python2.7/site-packages/ansible/runner/vars_plugins
-#fact_caching                    = redis
+fact_caching                    = redis
 
 [privilege_escalation]
 become                          = TRUE
