--- a/emailops-build/group_vars/ecelerity/vars.yml
+++ b/emailops-build/group_vars/ecelerity/vars.yml
@@ -1,6 +1,6 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  build-nginx/vars/main.yml
-#   DESCRIPTION:  nginx variables
+#          NAME:  group_vars/ecmgr
+#   DESCRIPTION:  Variables that apply to Ecelerity Cluster managers
 #==============================================================================
 ---
 
