--- a/emailops-build/group_vars/all/main.yml
+++ b/emailops-build/group_vars/all/main.yml
@@ -49,7 +49,7 @@ ldap_url: "ldap://ldap01-a.{{ client_name }}.{{ datacenter }}.synacor.com:389/ l
 ldap_master_url: "ldap://ldap01-a.{{ client_name }}.{{ datacenter }}.synacor.com:389/ ldap://ldap01-b.{{ client_name }}.{{ datacenter }}.synacor.com:389/ ldap://ldap01-c.{{ client_name }}.{{ datacenter }}.synacor.com:389/ ldap://ldap01-d.{{ client_name }}.{{ datacenter }}.synacor.com:389/"
 
 ##
-## ssl
+## ssl ciphers
 ##
 exclude_ciphers:
   - aNULL
@@ -71,3 +71,4 @@ exclude_ciphers:
   - SSL_RSA_EXPORT_WITH_RC4_40_MD5
   - SSL_RSA_WITH_DES_CBC_SHA
 include_ciphers: "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA:!SSL_DHE_DSS_EXPORT_WITH_DES40_CBC_SHA:!SSL_DHE_DSS_WITH_DES_CBC_SHA:!SSL_DHE_RSA_EXPORT_WITH_DES40_CBC_SHA:!SSL_DHE_RSA_WITH_DES_CBC_SHA:!SSL_RSA_EXPORT_WITH_DES40_CBC_SHA:!SSL_RSA_EXPORT_WITH_RC4_40_MD5:!SSL_RSA_WITH_DES_CBC_SHA"
+
