--- a/emailops-build/roles/build-ecelerity/defaults/main.yml
+++ b/emailops-build/roles/build-ecelerity/defaults/main.yml
@@ -147,6 +147,22 @@ outbound_hosts:
     address: <ipaddr>
   - name: "smtp01.{{ client_name }}.{{ datacenter }}.synacor.com"
     address: <ipaddr>
+
+##
+## ssl certs
+##
+self_signed_enabled: TRUE
+openssl_self_signed:
+  - name: 'smtp.{{ domain }}'
+    domain_name: 'smtp.{{ domain }}'
+    country: 'US'
+    state: 'New York'
+    city: 'Buffalo'
+    organization: 'Synacor, Inc.'
+    unit: 'Email Operations'
+    email: 'emailops@synacor.com'
+    days: 90
+
 #==============================================================================
 # END ${PLAYBOOK_DIR}/GROUP_VARS/${GROUP}/*
 #==============================================================================
